--- a/contents/unsupervised/03-gaussian-mixtures.qmd
+++ b/contents/unsupervised/03-gaussian-mixtures.qmd
@@ -3,6 +3,7 @@ title: "Mélange de gaussiennes"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 --- 
