--- a/contents/supervised/01-discriminant.qmd
+++ b/contents/supervised/01-discriminant.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Discriminant"
+title: "Analyse discriminante"
 format:
   html: default
   pdf:
@@ -7,26 +7,21 @@ format:
       - \usepackage{mathtools}
 ---
 
-La méthode a été introduite en 1936 par R. A. Fisher. Il s'intéressait à la taxonimie végétale, c'est-à-dire déterminer l'espèce de fleurs à partir de diverses mesures.
+L'analyse discriminante vise à classer des individus dans différents groupes à partir de variables explicatives continues. C'est une méthode supervisée : les groupes sont connus dans les données d'apprentissage et l'objectif est d'apprendre une règle de classification optimale. 
 
-Notation:
+## Notation
 
-Soit $X = (X_{i j})$, qui est une matrice de dimension $n \times p$, où $n$ est le nombre d'individus dans l'échantillon, $p$ est le nombre de variables et $X_{i j}$ est la valeur de la $j$e variable pour le $i$e individus.
 
-Identification des groupes:
+Soit $X = (X_{i j}) \in \mathbb{R}^{n \times p}$ un matrice de données, où $n$ est le nombre d'individus dans l'échantillon, $p$ est le nombre de variables et $X_{i j}$ est la valeur de la $j$e variable pour le $i$e individus.
 
-* $I_k = $ ensemble des individus du groupe $k$
+On suppose que chaque individu appartient à l'un des $K$ groupes. Pour $k \in \{ 1, \dots, K \}$, on note $I_k$ l'ensemble des individus du groupe $k$, $n_k$ le nombre d'observations dans $I_k$. On a donc $\sum_{k = 1}^{K} n_k = n$.
 
-* $n_k = |I_k| = $ cardinalité de $I_k$.
 
-* $n_{1} + \dots + n_q = n$, où $q$ est le nombre de groupes.
+## Objectif
 
-Score de l'analyse discriminante: on a des observations dans $R^p$. Pour faire de la classification à partir de $X_{1}, \dots, X_p$, on doit partionner $R^p$ en $q$ sous-ensembles de sorte que chacun des $q$ sous-ensembles est associé à un des $q$ groupes.
-
-On va chercher à passer de la dimension $p$ à la dimension $1$ en calculant un score $f(x_{1}, \dots, x_p) \in \mathbb{R}$ pour chaque observation et ensuite utiliser ce score pour déterminer le groupe d'appartenance (et donc partionner $R$). Le score proposé par Fisher est une combinaison linéaire des variables, c'est-à-dire
+Nos observations sont dans $R^p$. Pour faire de la classification à partir de $X_{1}, \dots, X_p$, on doit partionner $R^p$ en $K$ sous-ensembles de sorte que chacun des $K$ sous-ensembles soit associé à l'un des $K$ groupes. L'idée est de passer de $\mathbb{R}^p$ à $\mathbb{R}$ en calculant, pour chaque observation, un score $f(X_{1}, \dots, X_p) \in \mathbb{R}$ et ensuite utiliser ce score pour déterminer le groupe d'appartenance (et donc de partionner $R$). Le score proposé par Fisher est une combinaison linéaire des variables, i.e.
 $$f(X_{1}, \dots, X_p) = a^{\top} X + b = a_{1} X_{1} + \cdots + a_p X_p + b.$$
-
-On en déduira $q$ intervalles de décision $S_{1}, \dots, S_q$ associés aux groupes.
+Cette fonction de score nous permet de regrouper les individus d'un même groupe dans des zones proches du score et de séparer autant que possible les différents groupes selon ce score. On en déduira $K$ intervalles de décision $S_{1}, \dots, S_K$ associés aux groupes.
 
 ::: {.callout-tip icon=false}
 ## Remarque
@@ -39,16 +34,35 @@ $$\overline{X} = \left( \overline{X}_1, \dots, \overline{X}_p \right).$$
 Il ne reste plus qu'à choisir le vecteur $a = (a_{1}, \dots, a_p)$.
 :::
 
-On voudrait choisir le vecteur $a$ de sorte que les scores soient, à la fois, très différents entre les groupes et très similaires à l'intérieur d'un groupe. On s'intéresse donc à la variabilité des scores à l'intérieur des groupes et entre les groupes.
+## Critère de Fisher
 
-Étant donné $a \in R^p$, on a:
-$$\mathrm{Var}(f(X_{1}, \dots, X_p)) = \mathrm{Var}(a^{\top} X) = a^{\top} \mathrm{Var}(X) a,$$
-que nous estimons à partir des $n$ observations par 
+L'idée centrale de Fisher est d'optimiser le rapport entre la variabilité inter-groupes et la variabilité intra-groupe en fonction de $a$. Dit autrement, on voudrait choisir le vecteur $a$ de sorte que les scores soient, à la fois, très différents entre les groupes et très similaires à l'intérieur d'un groupe. On s'intéresse donc à la variabilité des scores à l'intérieur des groupes et entre les groupes.
+
+Notons 
+
+* $S$ la matrice de variance-covariance totale donnée par
+
+$$S = \sum_{i = 1}^{n} (X_i - \overline{X})(X_i - \overline{X})^{\top} \quad \text{où}\quad \overline{X} = \frac{1}{n} \sum_{i = 1}^{n} X_i;$$
+
+* $W$ la matrice de variance-covariance intra-groupe donnée par 
+
+$$W = \sum_{k = 1}^{K} \sum_{i \in I_k} (X_i - \overline{X}_k)(X_i - \overline{X}_k)^{\top} \quad \text{où} \quad \overline{X}_k = \frac{1}{n_k} \sum_{i \in I_k} X_i;$$
+
+* $B$ la matrice de variance-covariance inter-groupe donnée par 
+
+$$B = \sum_{k = 1}^{K} n_k (\overline{X}_k - \overline{X})(\overline{X}_k - \overline{X})^{\top}.$$
+
+
+Étant donné que $a \in \mathbb{R}^p$, on a:
+$$\mathrm{Var}(f(X_{1}, \dots, X_p)) = \mathrm{Var}(a^{\top} X) = a^{\top} \mathrm{Var}(X) a.$$
+Nous pouvons estimer cette variance par 
 $$\widehat{\mathrm{Var}}(f(X_{1}, \dots, X_p)) = \frac{1}{n} a^{\top} S a.$$
 
 La base de l'analyse discriminante repose sur le fait que 
-$$S = W + B,$$
-où $W$ est la matrice de variance intragroupe et $B$ est la matrice de variance intergroupe.
+$$S = W + B.$$
+
+::: {.callout-tip icon=false collapse=true}
+## Preuve
 
 On peut prouver ce résultat en considérant la définition des matrices $S, W$ et $B$.
 La moyenne de la variable $j$ pour tous les individus de l'échantillon est
@@ -78,41 +92,49 @@ Preuve:
 
 4. Faire les simplications appropriées.
 
-On obtient 
+:::
+
+Ainsi, en remplaçant $S$ par $W + B$, on obtient 
 $$\widehat{\mathrm{Var}}(a^{\top} X) = \frac{1}{n} a^{\top} S a = \frac{1}{n} \left( a^{\top} W a + a^{\top} B a \right).$$
+Le critère de Fisher s'écrit donc, pour $a \in \mathbb{R}^p$,
+$$J(a) = \frac{a^{\top} B a}{a^{\top} W a}.$$
+Le critère de Fisher peut se réécrire de façon équivalente comme 
+$$J(a) = \frac{a^{\top} B a}{a^{\top} S a}.$$
+On cherche à maximiser $J(a)$. Ce problème peut être reformuler des façons suivantes:
 
-On se rappelle que l'on veut choisir le vecteur $a$ pour que les scores puissent facilement séparer les groupes. En d'autres mots, on veut des scores les plus similaires possible à l'intérieur d'un groupe et des scores les plus différents possible entre les groupes.
+1. Maximiser $J(a)$ sous la contrainte que $a^{\top} a = 1$.
 
-On propose de choisir le vecteur $a in \mathbb{R}^p$ pour maximiser
-$$\frac{a^{\top} B a}{a^{\top} W a} \quad\text{où}\quad \frac{a^{\top} B a}{a^{\top} S a}.$$
-ce vecteur est unique à une constante près.
+2. Maximiser $a^{\top} B a$ sous la contrainte que $a^{\top} S a = 1$.
 
-Ce problème peut être reformuler des fa\c{c}ons suivantes:
+3. Maximiser $c^{\top} S^{-1/2} B S^{-1/2} c$ sous la contrainte que $c^{\top} c = 1$, où $c = S^{1/2} a$.
 
-* Maximiser $a^{\top} B a / a^{\top} S a$ sous la contrainte que $a^{\top} a = 1$.
-
-* Maximiser $a^{\top} B a$ sous la contrainte que $a^{\top} S a = 1$.
-
-* Maximiser $c^{\top} S^{-1/2} B S^{-1/2} c$ sous la contrainte que $c^{\top} c = 1$, où $c = S^{1/2} a$.
-
-En écrivant la troisième formulation
-$$c^{\top} \left( S^{-1/2} B S^{-1/2} \right) c \quad\text{s.c.} c^{\top} c = 1,$$
+En réécrivant la troisième formulation
+$$c^{\top} \left( S^{-1/2} B S^{-1/2} \right) c \quad\text{s.c.}\quad c^{\top} c = 1,$$
 on peut prendre $a = S^{-1/2} c$, où $c$ est un vecteur propre normé associé à $\lambda_{1}$ la première valeur propre de $S^{-1/2} B S^{-1/2}$. 
-De fa\c{c}on équivalente, de la deuxième formulation, on peut prendre $a$, un vecteur propre normé associé à $\lambda_{1}$ la première valeur propre de $S^{-1} B$.
+De façon équivalente, de la deuxième formulation, on peut prendre $a$, un vecteur propre normé associé à $\lambda_{1}$ la première valeur propre de $S^{-1} B$.
 Notons que comme
 $$S^{-1/2} B S^{-1/2} c = \lambda c \quad\text{et}\quad a = S^{-1/2} c,$$
 alors 
 $$S^{-1/2} B a = \lambda S^{1/2} a \Rightarrow S^{-1} B a = \lambda a.$$
-Les valeurs propres de $S^{-1} B$ et de $S^{-1/2} B S^{-1/2}$ sont donc les mêmes.
+Les valeurs propres de $S^{-1} B$ et de $S^{-1/2} B S^{-1/2}$ sont donc les mêmes et on peut facilement passer des vecteurs propres de $S^{-1} B$ à ceux de $S^{-1/2} B S^{-1/2}$.
+
+## Fonction discriminante
 
 La fonction discriminante de Fisher est donc 
 $$f(x) = a^{\top} (x - \overline{X}),$$
 où $a$ est le vecteur propre normé associé à la plus grande valeur propre de $S^{-1} B$. 
-Les scores $U_i = a^{\top} (X_{i} - \overline{X})$ sont les scores linéaires en $X_i$ qui ont le rapport (variance inter) / (variance intra) le plus élevé. On peut aussi prendre $U_i = a^{\top} X_i$, car ajouter la même constante à toutes les observations $i = 1, \dots, n$ ne change rien.
+Les scores, i.e. la représentation des observations dans $R$, sont données par $U_i = a^{\top} (X_{i} - \overline{X})$. Ces scores sont des combinaisons linéaires des variables et ils maximisent le rapport variance intra-groupe. sur variance inter-groupes.
+
+::: {.callout-note icon=false}
+## Remarque 
+
+On peut aussi prendre $U_i = a^{\top} X_i$, car ajouter la même constante à toutes les observations $i = 1, \dots, n$ ne fait que décaler la représentation dans $R$.
+
+:::
 
 * Pouvoir discriminant
 
-Puisque la matrice $S^{-1/2} B S^{-1/2}$ est symétrique et définie positive, ses valeurs propres sont toutes réelles et positives. De plus, on a que $S^{-1} B a - \lambda_{1} a$. Ainsi,
+Puisque la matrice $S^{-1/2} B S^{-1/2}$ est symétrique et définie positive, ses valeurs propres sont toutes réelles et positives. De plus, on a que $S^{-1} B a = \lambda_{1} a$. Ainsi,
 $$B a = \lambda_{1} S a \Rightarrow a^{\top} B a = \lambda_{1} a^{\top} S a \Rightarrow \lambda_{1} = \frac{a^{\top} B a}{a^{\top} S a}.$$
 
 On a donc $0 \leq \lambda_{1} \leq 1$. La valeur propre $\lambda_{1}$ peut donc être vue comme le pouvoir discriminant de $f$:
