--- a/contents/supervised/01-discriminant.qmd
+++ b/contents/supervised/01-discriminant.qmd
@@ -3,6 +3,7 @@ title: "Analyse discriminante"
 format:
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools}
 ---
