--- a/contents/supervised/04-ensemble.qmd
+++ b/contents/supervised/04-ensemble.qmd
@@ -1,8 +1,9 @@
 --- 
-title: "Ensemble"
+title: "Méthodes ensemblistes"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 --- 
